[metadata]
name = picar-4wd-mock
version = 0.0.1
description = PiCar-4WD Mock for Raspberry Pi
url = https://github.com/weicheng113/picar-4wd
author = SunFounder
author_email = service@sunfounder.com
license = GNU
keywords = 4wd raspberry pi car sunfounder

[options]
zip_safe = False
packages = find:
install_requires =
   

[options.packages.find]
exclude =
    examples
    tests*
    bin
    requirements.txt
    environment.yml

